--- a/other_dataset/mra_reproduce/MRA_Application.Rmd
+++ b/other_dataset/mra_reproduce/MRA_Application.Rmd
@@ -3,8 +3,8 @@ title: "MRA Data Application"
 author: "Qi Wang"
 date: "2023-05-11"
 output: pdf_document
----
 
+---
 ```{r}
 knitr::opts_chunk$set(echo = TRUE)
 rm(list = ls())
@@ -108,6 +108,11 @@ for (i in 1:nrow(mra_dat)) {
 }
 
 num_fold <- 5
+num_sample <- 100
+pred_drop <- 0.2
+
+pred_drop_layer <- layer_dropout(rate=pred_drop)
+
 set.seed(0)
 train_index_all <- sample(1:num_fold, length(y), replace = T)
 loss_dnn <- rep(NA, num_fold)
@@ -115,12 +120,11 @@ loss_dk <- rep(NA, num_fold)
 loss_ck <- rep(NA, num_fold)
 loss_inla <- rep(NA, num_fold)
 
-# pred_dnn <- rep(NA, length(y))
-# pred_dk <- rep(NA, length(y))
-# pred_ck <- rep(NA, length(y))
-# pred_inla <- rep(NA, length(y))
+pred_dnn <- matrix(NA,nrow = length(y), ncol = num_sample)
+pred_dk <- matrix(NA,nrow = length(y), ncol = num_sample)
+pred_ck <- matrix(NA,nrow = length(y), ncol = num_sample)
+pred_inla <- matrix(NA,nrow = length(y), ncol = num_sample)
 ```
-
 #DNN
 
 ```{r}
@@ -136,21 +140,23 @@ for (curr_index in 1:num_fold) {
   y_te <- y[-train_index]
 
 
-  model_dnn <- keras_model_sequential() 
+  dnn_input_layer <- layer_input(shape = c(ncol(x_tr))) 
 
-  model_dnn %>% 
-    layer_dense(units = 100, activation = 'relu', input_shape = c(ncol(x_tr)), kernel_initializer = "he_uniform") %>% 
-  layer_dropout(rate = 0.5) %>%
+  dnn_output_layer <- dnn_input_layer %>% 
+  layer_dense(units = 100, activation = 'relu',  kernel_initializer = "he_uniform") %>% 
+  pred_drop_layer(training = T) %>%
   layer_batch_normalization()%>%
   layer_dense(units = 100, activation = 'relu') %>%
-  layer_dropout(rate = 0.5) %>%
+  pred_drop_layer(training = T) %>%
   layer_batch_normalization()%>%
   layer_dense(units = 100, activation = 'relu') %>%
-  layer_dropout(rate = 0.5) %>%
+  pred_drop_layer(training = T) %>%
   layer_batch_normalization()%>%
   layer_dense(units = 100, activation = 'relu') %>%
   layer_dense(units = 1, activation = 'linear')
 
+  
+  model_dnn <- keras_model(dnn_input_layer, dnn_output_layer)
 # Compile the model
 
 model_dnn %>% compile(
@@ -159,26 +165,36 @@ model_dnn %>% compile(
   metrics = list("mse")
 )
   model_checkpoint <- callback_model_checkpoint(
-  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
+  filepath = "D:/77/research/temp/best_weights.h5",
   save_best_only = TRUE,
   monitor = "val_loss",
   mode = "min",
   verbose = 1
 )
   
-  
 mod_train_dnn <- model_dnn %>%
-  fit(x = x_tr, y = y_tr, epochs = 500, batch_size = 512, 
+  fit(x = x_tr, y = y_tr, epochs = 200, batch_size = 1000, 
       validation_data = list(x_te, y_te) , callbacks = list(model_checkpoint))
 
-model_dnn %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
+model_dnn %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
 
 loss_dnn[curr_index] <- evaluate(model_dnn, x_te, y_te)[2]
-# pred_dnn[-train_index] <- predict(model_dnn, x_te)
+ pb <- txtProgressBar(min = 0,      # Minimum value of the progress bar
+                     max = num_sample, # Maximum value of the progress bar
+                     style = 3,    # Progress bar style (also available style = 1 and style = 2)
+                     width = 50,   # Progress bar width. Defaults to getOption("width")
+                     char = "=")   # Character used to create the bar
+ 
+for (j in 1:num_sample) {
+  setTxtProgressBar(pb, j)
+  pred_dnn[-train_index,j] <- predict(model_dnn, x_te)
+}
+
 
 }
 
 ```
+
 
 # Deep Kriging
 
@@ -186,6 +202,7 @@ loss_dnn[curr_index] <- evaluate(model_dnn, x_te, y_te)[2]
 
 
 for (curr_index in 1:num_fold) {
+  
   train_index <- which(train_index_all != curr_index)
   basis_tr_1  <- basis_1[train_index,]
   basis_te_1  <- basis_1[-train_index,]
@@ -198,23 +215,25 @@ for (curr_index in 1:num_fold) {
   x_tr <- cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[train_index,],basis_tr_1, basis_tr_2, basis_tr_3)
   x_te <- cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[-train_index,],basis_te_1, basis_te_2, basis_te_3)
 
+  y_tr <- y[train_index]
+  y_te <- y[-train_index]
 
 
-y_tr <- y[train_index]
-y_te <- y[-train_index]
+  dk_input_layer <- layer_input(shape = c(ncol(x_tr))) 
 
-
-model_dk <- keras_model_sequential() 
-
-model_dk %>% 
-  layer_dense(units = 100, activation = 'relu', input_shape = c(ncol(x_tr)), kernel_initializer = "he_uniform") %>% 
-  layer_dropout(rate = 0.5) %>%
+  dk_output_layer <- dk_input_layer %>% 
+  layer_dense(units = 100, activation = 'relu', kernel_initializer = "he_uniform") %>% 
+  pred_drop_layer(training = T) %>%
   layer_batch_normalization() %>%
   layer_dense(units = 100, activation = 'relu') %>% 
-  layer_dropout(rate = 0.5) %>%
+  pred_drop_layer(training = T) %>%
   layer_batch_normalization()%>%
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_dense(units = 1, activation = 'linear')
+  
+  
+  
+model_dk <- keras_model(dk_input_layer, dk_output_layer)
 
 # Compile the model
 
@@ -225,7 +244,7 @@ model_dk %>% compile(
 )
 
   model_checkpoint <- callback_model_checkpoint(
-  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
+  filepath = "D:/77/research/temp/best_weights.h5",
   save_best_only = TRUE,
   monitor = "val_loss",
   mode = "min",
@@ -233,18 +252,29 @@ model_dk %>% compile(
 )
   
   
-  
 mod_train_dk <- model_dk %>%
-  fit(x = x_tr, y = y_tr, epochs =500, batch_size = 512, 
+  fit(x = x_tr, y = y_tr, epochs =200, batch_size = 1000, 
       validation_data = list(x_te, y_te) , callbacks = model_checkpoint)
 
 
-model_dk %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
+model_dk %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
 
 loss_dk[curr_index] <- evaluate(model_dk, x_te, y_te)[2]
-# pred_dk[-train_index] <- predict(model_dk, x_te)
+ pb <- txtProgressBar(min = 0,      # Minimum value of the progress bar
+                     max = num_sample, # Maximum value of the progress bar
+                     style = 3,    # Progress bar style (also available style = 1 and style = 2)
+                     width = 50,   # Progress bar width. Defaults to getOption("width")
+                     char = "=")   # Character used to create the bar
+for (j in 1:num_sample) {
+  setTxtProgressBar(pb, j)
+  pred_dk[-train_index,j] <- predict(model_dk, x_te)
+}
+
 }
 ```
+
+#Convolutional Kriging
+
 ```{r}
 
 for (curr_index in 1:num_fold) {
@@ -261,7 +291,6 @@ basis_te_3 <- array_reshape(basis_arr_3[-train_index,,], c(length(y) - length(tr
 cov_tr <- as.matrix( cbind(min_max_scale(long),min_max_scale(lat)))[train_index,]
 cov_te <- as.matrix( cbind(min_max_scale(long),min_max_scale(lat)))[-train_index,]
 
-drop = 0.2
 # We need three convolutional input model and adding covariates.
 input_basis_1 <- layer_input(shape = c(shape_row_1, shape_col_1, 1))
 input_basis_2 <- layer_input(shape = c(shape_row_2, shape_col_2, 1))
@@ -271,50 +300,51 @@ input_cov <- layer_input(shape = ncol(cov_tr))
 
 resolution_1_conv <- input_basis_1 %>%
   layer_conv_2d(filters = 128, kernel_size = c(2,2), activation = 'relu') %>%
-
   layer_flatten() %>%
   layer_dense(units = 100, activation = 'relu') %>% 
-
+  layer_batch_normalization() %>%
+  pred_drop_layer(training = T) %>%
   layer_dense(units = 100, activation = 'relu') %>% 
-
+  layer_batch_normalization() %>%
+  pred_drop_layer(training = T) %>%
   layer_dense(units = 100, activation = 'relu')
 
   resolution_2_conv <- input_basis_2 %>%
   layer_conv_2d(filters = 128, kernel_size = c(2,2), activation = 'relu') %>%
   layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
+  pred_drop_layer(training = T) %>%
   layer_flatten() %>%
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
+  pred_drop_layer(training = T) %>%
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
+  pred_drop_layer(training = T) %>%
   layer_dense(units = 100, activation = 'relu')
   
   resolution_3_conv <- input_basis_3 %>%
   layer_conv_2d(filters = 128, kernel_size = c(3,3), activation = 'relu') %>%
   layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
+  pred_drop_layer(training = T) %>%
   layer_flatten() %>%
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
+  pred_drop_layer(training = T) %>%
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
+  pred_drop_layer(training = T) %>%
   layer_dense(units = 100, activation = 'relu')
   
   cov_model <- input_cov %>%
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
+  pred_drop_layer(training = T) %>%
   layer_dense(units = 100, activation = 'relu') %>%
   layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
+  pred_drop_layer(training = T) %>%
   layer_dense(units = 100, activation = 'relu') %>%
   layer_batch_normalization() %>%
-  layer_dropout(drop) 
+  pred_drop_layer(training = T) 
 
 
 all_model <- layer_concatenate(list(resolution_1_conv, resolution_2_conv, resolution_3_conv, cov_model))
@@ -331,7 +361,7 @@ model_ck %>% compile(
 )
 
  model_checkpoint <- callback_model_checkpoint(
-  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
+  filepath = "D:/77/research/temp/best_weights.h5",
   save_best_only = TRUE,
   monitor = "val_loss",
   mode = "min",
@@ -342,15 +372,24 @@ mod_train_ck <- model_ck %>% fit(
   x = list(basis_tr_1, basis_tr_2, basis_tr_3, cov_tr),
   y = y[train_index],
   epochs=200,
-  batch_size=512,
+  batch_size=1000,
   validation_data=list(list(basis_te_1,basis_te_2,basis_te_3,cov_te), y[-train_index]),
   callbacks = model_checkpoint, shuffle = TRUE
 )
 
-model_ck %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
+model_ck %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
 
  loss_ck[curr_index] <- evaluate(model_ck, list(basis_te_1,basis_te_2,basis_te_3,cov_te), y[-train_index])[2]
- 
+  pb <- txtProgressBar(min = 0,      # Minimum value of the progress bar
+                     max = num_sample, # Maximum value of the progress bar
+                     style = 3,    # Progress bar style (also available style = 1 and style = 2)
+                     width = 50,   # Progress bar width. Defaults to getOption("width")
+                     char = "=")   # Character used to create the bar
+  
+ for (j in 1:num_sample) {
+  setTxtProgressBar(pb, j)
+  pred_ck[-train_index,j] <- predict(model_ck, list(basis_te_1,basis_te_2,basis_te_3,cov_te))
+}
    
 }
 
@@ -365,7 +404,8 @@ library(gridExtra)
 library(lattice)
 
 for (curr_index in 1:num_fold) {
-  train_index <- which(curr_index != train_index_all)
+  print(paste("Now doint index: ", curr_index))
+train_index <- which(curr_index != train_index_all)
   
 long_tr <- long[train_index]
 lat_tr <- lat[train_index]
@@ -406,9 +446,8 @@ model0<-inla(formula0, #the formula
              data=inla.stack.data(stk,spde=spde),  #the data stack
              family= 'gaussian',   #which family the data comes from
              control.predictor=list(A=inla.stack.A(stk),compute=TRUE),  #compute gives you the marginals of the linear predictor
-             control.compute = list(dic = TRUE, waic = TRUE, config = TRUE), #model diagnostics and config = TRUE gives you the GMRF
+             control.compute = list(dic = TRUE, waic = TRUE, config = TRUE, return.marginals.predictor = TRUE), #model diagnostics and config = TRUE gives you the GMRF
              verbose = FALSE) #can include verbose=TRUE to see the log of the model runs
-
 
 
 
@@ -439,12 +478,16 @@ stk.full <- inla.stack(stk, stk.pred)
 
 p.res.pred<-inla(formula0, data=inla.stack.data(stk.full,spde=spde),
                  family= 'gaussian', quantiles = NULL,
-                 control.predictor=list(link = 1, A=inla.stack.A(stk.full),compute=FALSE),  #compute gives you the marginals of the linear predictor
+                 control.predictor=list(link = 1, A=inla.stack.A(stk.full),compute=TRUE),  #compute gives you the marginals of the linear predictor
                  control.compute = list(config = TRUE), #model diagnostics and config = TRUE gives you the GMRF
                  control.inla(strategy = 'simplified.laplace', huge = TRUE),  #this is to make it run faster
                  verbose = FALSE) 
+
 index.pred<-inla.stack.index(stk.full, "pred")$data
 
+# <- inla.posterior.sample(n = num_sample, p.res.pred)
+temp_pos_sample <- inla.posterior.sample(num_sample,p.res.pred)
+pred_inla[-train_index,] <- matrix(sapply(temp_pos_sample, function(lst) lst$latent[index.pred]), ncol = num_sample)
 loss_inla[curr_index] <- mean((p.res.pred$summary.linear.predictor[index.pred,"mean"] - y_te)^2)
 
 }
@@ -455,8 +498,8 @@ loss_inla[curr_index] <- mean((p.res.pred$summary.linear.predictor[index.pred,"m
 
 loss_all <- as.data.frame(cbind(loss_inla, loss_dnn, loss_dk, loss_ck))
 
-write.csv(as.data.frame(loss_all),here::here("other_dataset/mra_reproduce/loss_mra.csv"),row.names = FALSE)
-loss_all <- read.csv(here::here("other_dataset/mra_reproduce/loss_mra.csv"))
+write.csv(as.data.frame(loss_all),here::here("other_dataset/mra_reproduce/mra_loss.csv"),row.names = FALSE)
+loss_all <- read.csv(here::here("other_dataset/mra_reproduce/mra_loss.csv"))
 loss_inla_ck <- loss_all[,c(1,4)]
 
 ggplot() +
@@ -466,14 +509,110 @@ ggplot() +
   geom_boxplot(data = reshape2::melt(loss_all), aes(x = variable, y = value)) +
    coord_flip()
 
+write.csv(as.data.frame(pred_dnn),"D:/77/Reasearch/temp/dnn_pred_mra.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_dk),"D:/77/Reasearch/temp/dk_pred_mra.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_ck),"D:/77/Reasearch/temp/ck_pred_mra.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_inla),"D:/77/Reasearch/temp/inla_pred_mra.csv",row.names = FALSE)
+
 
 ```
+# CRPS Calculation
+
+```{r}
 
 
+sat_dat <- aggregate(y ~ long + lat, data = sat_raw, FUN = mean)
 
 
+long <- sat_dat$long
+lat <- sat_dat$lat
+y <- sat_dat$y
+
+library(verification)
+calculate_dist_between <- function(x){
+  return( mean(spDists(matrix(x, ncol = 1)))  )
+}
+
+calculate_dist_true <- function(x, true_x){
+
+  return( abs(x-true_x) )
+
+}
+
+crps <- function(prediction_matrix, true_value){
+  print("Calculating between-sample distance . . .")
+  between_sample <- apply(prediction_matrix, 1, calculate_dist_between)
+  print("Calculating absolute error . . .")
+
+  sample_residual <- rowMeans(apply(prediction_matrix, 2, calculate_dist_true, true_x = true_value))
+
+  res <- 0.5 * between_sample - sample_residual
+  return(res)
+}
 
 
+pred_dnn <- as.matrix(read.csv("D:/77/Reasearch/temp/dnn_pred.csv"))
+pred_dk <- as.matrix(read.csv("D:/77/Reasearch/temp/dk_pred.csv"))
+pred_ck <- as.matrix(read.csv("D:/77/Reasearch/temp/ck_pred.csv"))
+pred_inla <- as.matrix(read.csv("D:/77/Reasearch/temp/inla_pred.csv"))
+
+library(scoringutils)
+crps_dnn_all <- crps(pred_dnn,y)
+crps_dk_all <- crps(pred_dk,y)
+crps_ck_all <- crps(pred_ck,y)
+crps_inla_all <- crps(pred_inla,y)
+
+ggplot() +
+  geom_boxplot(data = reshape2::melt(as.data.frame(cbind(crps_dnn_all,crps_dk_all,crps_ck_all,crps_inla_all))), aes(x = variable, y = value)) +
+   coord_flip()
 
 
+print(paste("CRPS of DNN is: ", mean(crps_dnn_all)))
+print(paste("CRPS of DK is: ", mean(crps_dk_all)))
+print(paste("CRPS of CK is: ", mean(crps_ck_all)))
+print(paste("CRPS of INLA is: ", mean(crps_inla_all)))
+```
 
+# Interval Score Calculation
+
+```{r}
+int_score <- function(l,u,true_x,alpha = 0.05){
+  out_1 <- u-l
+  out_2 <- 2/alpha * (l-true_x) * ifelse(true_x < l, 1, 0)
+  out_3 <- 2/alpha * (true_x-u) * ifelse(true_x > u, 1, 0)
+  return(out_1 + out_2 + out_3)
+}
+
+all_interval_score <- function(prediction_sample, alpha = 0.05, true_x){
+  num_sample <- length(true_x)
+ pb <- txtProgressBar(min = 0,      # Minimum value of the progress bar
+                     max = num_sample, # Maximum value of the progress bar
+                     style = 3,    # Progress bar style (also available style = 1 and style = 2)
+                     width = 50,   # Progress bar width. Defaults to getOption("width")
+                     char = "=")   # Character used to create the bar
+ 
+  
+  all_score <- rep(NA, length(true_x))
+ for (int_score_idx in 1:length(true_x)) {
+   setTxtProgressBar(pb, int_score_idx)
+    l <- quantile(prediction_sample[int_score_idx,], alpha/2)
+    u <- quantile(prediction_sample[int_score_idx,], 1-alpha/2)
+    all_score[int_score_idx] <- int_score(l = l, u = u, true_x = true_x[int_score_idx], alpha = alpha)
+  }
+ return(all_score)
+}
+
+int_score_dnn <- all_interval_score(prediction_sample = pred_dnn, true_x = y)
+int_score_dk <- all_interval_score(prediction_sample = pred_dk, true_x = y)
+int_score_ck <- all_interval_score(prediction_sample = pred_ck, true_x = y)
+int_score_inla <- all_interval_score(prediction_sample = pred_inla, true_x = y)
+
+ggplot() +
+  geom_boxplot(data = reshape2::melt(as.data.frame(cbind(int_score_dnn,int_score_dk,int_score_ck,int_score_inla))), aes(x = variable, y = value)) +
+   coord_flip()
+
+
+print(paste("Interval Score of DNN is: ", mean(int_score_dnn)))
+print(paste("Interval Score of DK is: ", mean(int_score_dk)))
+print(paste("Interval Score of CK is: ", mean(int_score_ck )))
+print(paste("Interval Score of INLA is: ", mean(int_score_inla )))
