--- a/other_dataset/mra_reproduce/MRA_Application.Rmd
+++ b/other_dataset/mra_reproduce/MRA_Application.Rmd
@@ -3,8 +3,8 @@ title: "MRA Data Application"
 author: "Qi Wang"
 date: "2023-05-11"
 output: pdf_document
-
 ---
+
 ```{r}
 knitr::opts_chunk$set(echo = TRUE)
 rm(list = ls())
@@ -195,7 +195,6 @@ for (j in 1:num_sample) {
 
 ```
 
-
 # Deep Kriging
 
 ```{r}
@@ -261,7 +260,7 @@ model_dk %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
 
 loss_dk[curr_index] <- evaluate(model_dk, x_te, y_te)[2]
  pb <- txtProgressBar(min = 0,      # Minimum value of the progress bar
-                     max = num_sample, # Maximum value of the progress bar
+                     max = num_all, # Maximum value of the progress bar
                      style = 3,    # Progress bar style (also available style = 1 and style = 2)
                      width = 50,   # Progress bar width. Defaults to getOption("width")
                      char = "=")   # Character used to create the bar
@@ -381,7 +380,7 @@ model_ck %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
 
  loss_ck[curr_index] <- evaluate(model_ck, list(basis_te_1,basis_te_2,basis_te_3,cov_te), y[-train_index])[2]
   pb <- txtProgressBar(min = 0,      # Minimum value of the progress bar
-                     max = num_sample, # Maximum value of the progress bar
+                     max = num_all, # Maximum value of the progress bar
                      style = 3,    # Progress bar style (also available style = 1 and style = 2)
                      width = 50,   # Progress bar width. Defaults to getOption("width")
                      char = "=")   # Character used to create the bar
@@ -404,7 +403,6 @@ library(gridExtra)
 library(lattice)
 
 for (curr_index in 1:num_fold) {
-  print(paste("Now doint index: ", curr_index))
 train_index <- which(curr_index != train_index_all)
   
 long_tr <- long[train_index]
@@ -509,10 +507,10 @@ ggplot() +
   geom_boxplot(data = reshape2::melt(loss_all), aes(x = variable, y = value)) +
    coord_flip()
 
-write.csv(as.data.frame(pred_dnn),"D:/77/Reasearch/temp/dnn_pred_mra.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_dk),"D:/77/Reasearch/temp/dk_pred_mra.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_ck),"D:/77/Reasearch/temp/ck_pred_mra.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_inla),"D:/77/Reasearch/temp/inla_pred_mra.csv",row.names = FALSE)
+# write.csv(as.data.frame(pred_dnn),here::here("other_dataset/mra_reproduce/dnn_pred.csv"),row.names = FALSE)
+# write.csv(as.data.frame(pred_dk),here::here("other_dataset/mra_reproduce/dk_pred.csv"),row.names = FALSE)
+# write.csv(as.data.frame(pred_ck),here::here("other_dataset/mra_reproduce/ck_pred.csv"),row.names = FALSE)
+# write.csv(as.data.frame(pred_inla),here::here("other_dataset/mra_reproduce/inla_pred.csv"),row.names = FALSE)
 
 
 ```
@@ -551,10 +549,10 @@ crps <- function(prediction_matrix, true_value){
 }
 
 
-pred_dnn <- as.matrix(read.csv("D:/77/Reasearch/temp/dnn_pred_mra.csv"))
-pred_dk <- as.matrix(read.csv("D:/77/Reasearch/temp/dk_pred_mra.csv"))
-pred_ck <- as.matrix(read.csv("D:/77/Reasearch/temp/ck_pred_mra.csv"))
-pred_inla <- as.matrix(read.csv("D:/77/Reasearch/temp/inla_pred_mra.csv"))
+pred_dnn <- as.matrix(read.csv(here::here("D:/77/Reasearch/temp/dnn_pred_mra.csv")))
+pred_dk <- as.matrix(read.csv(here::here("D:/77/Reasearch/temp/dk_pred_mra.csv")))
+pred_ck <- as.matrix(read.csv(here::here("D:/77/Reasearch/temp/ck_pred_mra.csv")))
+pred_inla <- as.matrix(read.csv(here::here("D:/77/Reasearch/temp/inla_pred_mra.csv")))
 
 library(scoringutils)
 crps_dnn_all <- crps(pred_dnn,y)
@@ -565,7 +563,11 @@ crps_inla_all <- crps(pred_inla,y)
 ggplot() +
   geom_boxplot(data = reshape2::melt(as.data.frame(cbind(crps_dnn_all,crps_dk_all,crps_ck_all,crps_inla_all))), aes(x = variable, y = value)) +
    coord_flip()
-
+ggplot() +
+  geom_density(aes(x = crps_dnn_all, color = "DNN")) +
+  geom_density(aes(x = crps_dk_all, color = "DK")) +
+  geom_density(aes(x = crps_ck_all, color = "CK")) +
+  geom_density(aes(x = crps_inla_all, color = "INLA")) 
 
 print(paste("CRPS of DNN is: ", mean(crps_dnn_all)))
 print(paste("CRPS of DK is: ", mean(crps_dk_all)))
@@ -584,9 +586,9 @@ int_score <- function(l,u,true_x,alpha = 0.05){
 }
 
 all_interval_score <- function(prediction_sample, alpha = 0.05, true_x){
-  num_sample <- length(true_x)
+  num_all <- length(true_x)
  pb <- txtProgressBar(min = 0,      # Minimum value of the progress bar
-                     max = num_sample, # Maximum value of the progress bar
+                     max = num_all, # Maximum value of the progress bar
                      style = 3,    # Progress bar style (also available style = 1 and style = 2)
                      width = 50,   # Progress bar width. Defaults to getOption("width")
                      char = "=")   # Character used to create the bar
@@ -611,8 +613,23 @@ ggplot() +
   geom_boxplot(data = reshape2::melt(as.data.frame(cbind(int_score_dnn,int_score_dk,int_score_ck,int_score_inla))), aes(x = variable, y = value)) +
    coord_flip()
 
+ggplot() +
+  geom_density(aes(x = int_score_dnn, color = "DNN")) +
+  geom_density(aes(x = int_score_dk, color = "DK")) +
+  geom_density(aes(x = int_score_ck, color = "CK")) +
+  geom_density(aes(x = int_score_inla, color = "INLA")) 
+
+
+
+int_score_dnn <- all_interval_score(prediction_sample = pred_dnn, true_x = y)
+int_score_dk <- all_interval_score(prediction_sample = pred_dk, true_x = y)
+int_score_ck <- all_interval_score(prediction_sample = pred_ck, true_x = y)
+int_score_inla <- all_interval_score(prediction_sample = pred_inla, true_x = y)
+
+
 
 print(paste("Interval Score of DNN is: ", mean(int_score_dnn)))
 print(paste("Interval Score of DK is: ", mean(int_score_dk)))
 print(paste("Interval Score of CK is: ", mean(int_score_ck )))
 print(paste("Interval Score of INLA is: ", mean(int_score_inla )))
+```
