--- a/other_dataset/satellite/Sat_Application.Rmd
+++ b/other_dataset/satellite/Sat_Application.Rmd
@@ -496,17 +496,18 @@ ggplot() +
   geom_boxplot(data = reshape2::melt(loss_all), aes(x = variable, y = value)) +
    coord_flip()
 
-write.csv(as.data.frame(pred_dnn),"D:/77/Reasearch/temp/dnn_pred_sat.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_dk),"D:/77/Reasearch/temp/dk_pred_sat.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_ck),"D:/77/Reasearch/temp/ck_pred_sat.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_inla),"D:/77/Reasearch/temp/inla_pred_sat.csv",row.names = FALSE)
+write.csv(as.data.frame(pred_dnn),here::here("other_dataset/satellite/dnn_pred.csv"),row.names = FALSE)
+write.csv(as.data.frame(pred_dk),here::here("other_dataset/satellite/dk_pred.csv"),row.names = FALSE)
+write.csv(as.data.frame(pred_ck),here::here("other_dataset/satellite/ck_pred.csv"),row.names = FALSE)
+write.csv(as.data.frame(pred_inla),here::here("other_dataset/satellite/inla_pred.csv"),row.names = FALSE)
 
 
 ```
 # CRPS Calculation
 
 ```{r}
-
+library(sp)
+library(ggplot2)
 load(here::here("other_dataset/satellite/SatelliteTemps.RData"))
 sat_raw <- na.omit(sat.temps)
 colnames(sat_raw) <- c("long","lat","y")
@@ -548,7 +549,6 @@ pred_ck <- as.matrix(read.csv("D:/77/Reasearch/temp/ck_pred_sat.csv"))
 pred_inla <- as.matrix(read.csv("D:/77/Reasearch/temp/inla_pred_sat.csv"))
 #source(here::here("other_dataset/satellite/scoringRules_wrappers.R"))
 library(scoringutils)
-library(sp)
 crps_dnn_all <- crps(pred_dnn,y)
 crps_dk_all <- crps(pred_dk,y)
 crps_ck_all <- crps(pred_ck,y)
@@ -557,6 +557,14 @@ crps_inla_all <- crps(pred_inla,y)
 ggplot() +
   geom_boxplot(data = reshape2::melt(as.data.frame(cbind(crps_dnn_all,crps_dk_all,crps_ck_all,crps_inla_all))), aes(x = variable, y = value)) +
    coord_flip()
+ggplot() +
+  geom_density(aes(x = crps_dnn_all, color = "DNN")) +
+  geom_density(aes(x = crps_dk_all, color = "DK")) +
+  geom_density(aes(x = crps_ck_all, color = "CK")) +
+  geom_density(aes(x = crps_inla_all, color = "INLA")) 
+  
+  
+
 
 
 print(paste("CRPS of DNN is: ", mean(crps_dnn_all)))
@@ -602,6 +610,13 @@ int_score_inla <- all_interval_score(prediction_sample = pred_inla, true_x = y)
 ggplot() +
   geom_boxplot(data = reshape2::melt(as.data.frame(cbind(int_score_dnn,int_score_dk,int_score_ck,int_score_inla))), aes(x = variable, y = value)) +
    coord_flip()
+
+ggplot() +
+  geom_density(aes(x = int_score_dnn, color = "DNN")) +
+  geom_density(aes(x = int_score_dk, color = "DK")) +
+  geom_density(aes(x = int_score_ck, color = "CK")) +
+  geom_density(aes(x = int_score_inla, color = "INLA")) 
+
 
 
 print(paste("Interval Score of DNN is: ", mean(int_score_dnn)))
